# ynab-updater

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: validation.yml
src/indexa_updater/: __about__.py
src/ynab_updater/: __about__.py  __init__.py  app.css  app.py  app.tcss  app2.py  cli.py  config.py  constats.py  modals.py  screens.py  update_logic.py  utils.py  widgets.py  ynab_client.py
src/ynab_updater/modals/: __init__.py  account_select_modal.py  api_key_modal.py  budget_select_modal.py  confirm_modal.py  utils.py
src/ynab_updater/screens/: __init__.py  config_screen.py  initial_setup.py  main.py
src/ynab_updater/style/: app.tcss
src/ynab_updater/widgets/: __init__.py  account_row.py  accounts.py  debt_account_mapping_row.py  main_view.py  net_worth.py
tests/: conftest.py  test_config.py  test_utils.py
tests/assets/: config.json  config_incomplete_budget.json  config_invalid_cleared_status.json  config_multiple_selected_budgets.json  config_no_budgets.json
