[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indexa-updater"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Juanpe Araque", email = "erjuanpea@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Juanpe Araque/indexa-updater#readme"
Issues = "https://github.com/Juanpe Araque/indexa-updater/issues"
Source = "https://github.com/Juanpe Araque/indexa-updater"

[tool.hatch.version]
path = "src/indexa_updater/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/indexa_updater tests}"

[tool.coverage.run]
source_pkgs = ["indexa_updater", "tests"]
branch = true
parallel = true
omit = [
  "src/indexa_updater/__about__.py",
]

[tool.coverage.paths]
indexa_updater = ["src/indexa_updater", "*/indexa-updater/src/indexa_updater"]
tests = ["tests", "*/indexa-updater/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
